--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@react-navigation/material-bottom-tabs": "^5.3.13",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
+    "axios": "^0.21.1",
     "expo": "~40.0.0",
+    "expo-image-picker": "~9.2.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -26,14 +28,17 @@
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
     "react-native-update-gradle": "^1.2.0",
-    "react-native-web": "~0.13.12",
-    "expo-image-picker": "~9.2.0"
+    "react-native-uuid": "^1.4.9",
+    "react-native-uuid-generator": "^6.1.1",
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
+    "@types/react-native-fetch-blob": "^0.10.5",
+    "@types/react-native-uuid-generator": "^4.0.0",
     "typescript": "~4.0.0"
   },
   "private": true
