--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-image-crop-picker": "^0.35.2",
     "react-native-joi": "0.0.5",
     "react-native-paper": "^4.7.1",
@@ -30,7 +31,8 @@
     "react-native-update-gradle": "^1.2.0",
     "react-native-uuid": "^1.4.9",
     "react-native-uuid-generator": "^6.1.1",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "socket.io-client": "^3.1.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
